--- a/envs/drimseq_DTU_better.yaml
+++ b/envs/drimseq_DTU_better.yaml
@@ -9,7 +9,6 @@ dependencies:
   - _r-mutex=1.0.1=anacondar_1
   - binutils_impl_linux-64=2.35.1=h193b22a_2
   - binutils_linux-64=2.35=h67ddf6f_30
-  - bioconductor-annotate=1.68.0=r40_0
   - bioconductor-annotationdbi=1.52.0=r40_0
   - bioconductor-biobase=2.50.0=r40h037d062_0
   - bioconductor-biocfilecache=1.14.0=r40_0
@@ -18,12 +17,8 @@ dependencies:
   - bioconductor-biomart=2.46.0=r40_0
   - bioconductor-biostrings=2.58.0=r40h037d062_0
   - bioconductor-delayedarray=0.16.0=r40h037d062_0
-  - bioconductor-deseq2=1.30.0=r40h5f743cb_0
-  - bioconductor-dexseq=1.36.0=r40_0
   - bioconductor-drimseq=1.18.0=r40_0
   - bioconductor-edger=3.32.0=r40h5f743cb_0
-  - bioconductor-genefilter=1.72.0=r40hc6cf775_0
-  - bioconductor-geneplotter=1.68.0=r40_0
   - bioconductor-genomeinfodb=1.26.0=r40_0
   - bioconductor-genomeinfodbdata=1.2.4=r40_0
   - bioconductor-genomicalignments=1.26.0=r40h037d062_0
@@ -43,25 +38,22 @@ dependencies:
   - bwidget=1.9.14=ha770c72_0
   - bzip2=1.0.8=h7f98852_4
   - ca-certificates=2020.12.5=ha878542_0
-  - cairo=1.16.0=h9f066cc_1006
-  - certifi=2020.12.5=py39hf3d152e_1
+  - cairo=1.16.0=h7979940_1007
   - curl=7.71.1=he644dc0_3
   - fontconfig=2.13.1=hba837de_1004
   - freetype=2.10.4=h0708190_1
   - fribidi=1.0.10=h36c2ea0_0
-  - gcc_impl_linux-64=7.5.0=hda68d29_13
-  - gcc_linux-64=7.5.0=h47867f9_30
+  - gcc_impl_linux-64=9.3.0=h70c0ae5_18
+  - gcc_linux-64=9.3.0=hf25ea35_30
   - gettext=0.19.8.1=h0b5b191_1005
-  - gfortran_impl_linux-64=7.5.0=h56cb351_18
-  - gfortran_linux-64=7.5.0=h78c8a43_30
-  - glib=2.66.7=h9c3ff4c_0
-  - glib-tools=2.66.7=h9c3ff4c_0
+  - gfortran_impl_linux-64=9.3.0=hc4a2995_18
+  - gfortran_linux-64=9.3.0=hdc58fab_30
   - graphite2=1.3.13=h58526e2_1001
   - gsl=2.6=he838d99_2
-  - gxx_impl_linux-64=7.5.0=h64c220c_13
-  - gxx_linux-64=7.5.0=h555fc39_30
-  - harfbuzz=2.7.2=ha5b49bf_1
-  - icu=67.1=he1b5a44_0
+  - gxx_impl_linux-64=9.3.0=hd87eabc_18
+  - gxx_linux-64=9.3.0=h3fbe746_30
+  - harfbuzz=2.7.4=h5cf4720_0
+  - icu=68.1=h58526e2_0
   - jpeg=9d=h36c2ea0_0
   - kernel-headers_linux-64=2.6.32=h77966d4_13
   - krb5=1.17.2=h926e7f8_0
@@ -73,13 +65,13 @@ dependencies:
   - libffi=3.3=h58526e2_2
   - libgcc-devel_linux-64=9.3.0=h7864c58_18
   - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=7.5.0=h14aa051_18
-  - libgfortran4=7.5.0=h14aa051_18
+  - libgfortran-ng=9.3.0=hff62375_18
+  - libgfortran5=9.3.0=hff62375_18
   - libglib=2.66.7=h1f3bc88_0
   - libgomp=9.3.0=h2828fa1_18
   - libiconv=1.16=h516909a_0
   - liblapack=3.8.0=17_openblas
-  - libopenblas=0.3.10=pthreads_hb3c22a3_5
+  - libopenblas=0.3.10=pthreads_h4812303_5
   - libpng=1.6.37=h21135ba_2
   - libssh2=1.9.0=hab1572f_5
   - libstdcxx-devel_linux-64=9.3.0=hb016644_18
@@ -88,23 +80,20 @@ dependencies:
   - libuuid=2.32.1=h7f98852_1000
   - libwebp-base=1.2.0=h7f98852_0
   - libxcb=1.13=h7f98852_1003
-  - libxml2=2.9.10=h68273f3_2
+  - libxml2=2.9.10=h72842e0_3
   - lz4-c=1.9.3=h9c3ff4c_0
   - make=4.3=hd18ef5c_1
   - ncurses=6.2=h58526e2_4
   - openssl=1.1.1j=h7f98852_0
   - pango=1.42.4=h69149e4_5
   - pcre=8.44=he1b5a44_0
-  - pcre2=10.35=h032f7d1_2
-  - pip=21.0.1=pyhd8ed1ab_0
+  - pcre2=10.36=h032f7d1_1
   - pixman=0.40.0=h36c2ea0_0
   - pthread-stubs=0.4=h36c2ea0_1001
-  - python=3.9.1=hffdb5ce_5_cpython
-  - python_abi=3.9=1_cp39
   - r-askpass=1.1=r40hcdcec82_2
   - r-assertthat=0.2.1=r40h6115d3f_2
   - r-backports=1.2.1=r40hcfec24a_0
-  - r-base=4.0.2=he766273_1
+  - r-base=4.0.3=hd23ff56_6
   - r-bh=1.75.0_0=r40hc72bb7e_0
   - r-bit=4.0.4=r40hcdcec82_0
   - r-bit64=4.0.5=r40hcdcec82_0
@@ -137,7 +126,6 @@ dependencies:
   - r-gtable=0.3.0=r40h6115d3f_3
   - r-hms=1.0.0=r40hc72bb7e_0
   - r-httr=1.4.2=r40h6115d3f_0
-  - r-hwriter=1.3.2=r40h6115d3f_1003
   - r-isoband=0.2.3=r40h03ef668_0
   - r-jsonlite=1.7.2=r40hcfec24a_0
   - r-labeling=0.4.2=r40h142f84f_0
@@ -153,7 +141,7 @@ dependencies:
   - r-mgcv=1.8_34=r40he454529_0
   - r-mime=0.10=r40hcfec24a_0
   - r-munsell=0.5.0=r40h6115d3f_1003
-  - r-nlme=3.1_150=r40h31ca83e_0
+  - r-nlme=3.1_152=r40h859d828_0
   - r-openssl=1.4.3=r40he5c4762_0
   - r-pillar=1.4.7=r40hc72bb7e_0
   - r-pkgbuild=1.2.0=r40hc72bb7e_0
@@ -171,7 +159,6 @@ dependencies:
   - r-rappdirs=0.3.3=r40hcfec24a_0
   - r-rcolorbrewer=1.1_2=r40h6115d3f_1003
   - r-rcpp=1.0.6=r40h03ef668_0
-  - r-rcpparmadillo=0.10.2.1.0=r40h306847c_0
   - r-rcurl=1.98_1.2=r40hcdcec82_1
   - r-rematch2=2.1.2=r40h6115d3f_1
   - r-reshape2=1.4.4=r40h0357c0b_1
@@ -181,10 +168,8 @@ dependencies:
   - r-rstudioapi=0.13=r40hc72bb7e_0
   - r-scales=1.1.1=r40h6115d3f_0
   - r-snow=0.4_3=r40h6115d3f_1002
-  - r-statmod=1.4.35=r40h6e990d7_1
-  - r-stringi=1.5.3=r40hca8494e_0
+  - r-stringi=1.5.3=r40hcabe038_1
   - r-stringr=1.4.0=r40h6115d3f_2
-  - r-survival=3.2_7=r40hcfec24a_0
   - r-sys=3.4=r40hcdcec82_0
   - r-testthat=3.0.2=r40h03ef668_0
   - r-tibble=3.0.6=r40hcfec24a_0
@@ -196,17 +181,12 @@ dependencies:
   - r-withr=2.4.1=r40hc72bb7e_0
   - r-xml=3.99_0.5=r40hcfec24a_0
   - r-xml2=1.3.2=r40h0357c0b_1
-  - r-xtable=1.8_4=r40h6115d3f_3
   - r-zeallot=0.1.0=r40h6115d3f_1002
   - readline=8.0=he28a2e2_2
   - sed=4.8=he412f7d_0
-  - setuptools=49.6.0=py39hf3d152e_3
-  - sqlite=3.34.0=h74cdb3f_0
   - sysroot_linux-64=2.12=h77966d4_13
   - tk=8.6.10=h21135ba_1
   - tktable=2.10=hb7b940f_3
-  - tzdata=2021a=he74cb21_0
-  - wheel=0.36.2=pyhd3deb0d_0
   - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.0.10=h516909a_0
   - xorg-libsm=1.2.3=h84519dc_1000
