--- a/envs/edger_DAS.yaml
+++ b/envs/edger_DAS.yaml
@@ -3,27 +3,34 @@ channels:
   - conda-forge
   - bioconda
   - defaults
-  - r
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=0_gnu
   - _r-mutex=1.0.1=anacondar_1
   - binutils_impl_linux-64=2.33.1=h53a641e_8
   - binutils_linux-64=2.33.1=h9595d00_16
+  - bioconductor-biobase=2.46.0=r36h516909a_0
   - bioconductor-biocgenerics=0.32.0=r36_0
   - bioconductor-biocparallel=1.20.0=r36he1b5a44_0
+  - bioconductor-biostrings=2.54.0=r36h516909a_0
+  - bioconductor-delayedarray=0.12.0=r36h516909a_0
   - bioconductor-edger=3.28.0=r36he1b5a44_0
   - bioconductor-genomeinfodb=1.22.0=r36_0
   - bioconductor-genomeinfodbdata=1.2.2=r36_0
+  - bioconductor-genomicalignments=1.22.0=r36h516909a_0
   - bioconductor-genomicranges=1.38.0=r36h516909a_0
   - bioconductor-iranges=2.20.0=r36h516909a_0
   - bioconductor-limma=3.42.0=r36h516909a_0
+  - bioconductor-rhtslib=1.18.0=r36hdb70ac9_1
+  - bioconductor-rsamtools=2.2.0=r36he1b5a44_0
+  - bioconductor-rtracklayer=1.46.0=r36h516909a_0
   - bioconductor-s4vectors=0.24.0=r36h516909a_0
+  - bioconductor-summarizedexperiment=1.16.0=r36_0
   - bioconductor-xvector=0.26.0=r36h516909a_0
   - bioconductor-zlibbioc=1.32.0=r36h516909a_0
   - bwidget=1.9.14=0
   - bzip2=1.0.8=h516909a_2
-  - ca-certificates=2019.11.28=hecc5488_0
+  - ca-certificates=2020.12.5=ha878542_0
   - cairo=1.16.0=hfb77d84_1002
   - curl=7.68.0=hf8cf82a_0
   - fontconfig=2.13.1=h86ecdb6_1001
@@ -65,7 +72,7 @@ dependencies:
   - lz4-c=1.8.3=he1b5a44_1001
   - make=4.2.1=h14c3975_2004
   - ncurses=6.1=hf484d3e_1002
-  - openssl=1.1.1e=h516909a_0
+  - openssl=1.1.1h=h516909a_0
   - pango=1.42.4=ha030887_1
   - pcre=8.44=he1b5a44_0
   - pixman=0.38.0=h516909a_1003
@@ -86,6 +93,8 @@ dependencies:
   - r-lattice=0.20_38=r36hcdcec82_1002
   - r-locfit=1.5_9.1=r36h516909a_1004
   - r-magrittr=1.5=r36h6115d3f_4
+  - r-matrix=1.2_18=r36h7fa42b6_3
+  - r-matrixstats=0.57.0=r36hcdcec82_0
   - r-pillar=1.3.1=r36h6115d3f_0
   - r-pkgconfig=2.0.2=r36h6115d3f_0
   - r-plogr=0.2.0=r36h6115d3f_0
@@ -99,6 +108,7 @@ dependencies:
   - r-tibble=2.1.1=r36h96ca727_0
   - r-tidyselect=0.2.5=r36h29659fb_0
   - r-utf8=1.1.4=r36h96ca727_0
+  - r-xml=3.99_0.3=r36hcdcec82_1
   - readline=8.0=hf8c457e_0
   - sed=4.7=h1bed415_1000
   - tk=8.6.10=hed695b0_0
@@ -117,3 +127,4 @@ dependencies:
   - xz=5.2.4=h14c3975_1001
   - zlib=1.2.11=h516909a_1006
   - zstd=1.4.4=h3b9ef0a_1
+prefix: /home/roberto/miniconda3/envs/edger
