--- a/envs/dexseq_DTU.yaml
+++ b/envs/dexseq_DTU.yaml
@@ -1,4 +1,4 @@
-name: dexseq_dtu
+name: dexseq_DTU
 channels:
   - conda-forge
   - bioconda
@@ -7,8 +7,8 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
   - _r-mutex=1.0.1=anacondar_1
-  - binutils_impl_linux-64=2.35.1=h17ad2fc_0
-  - binutils_linux-64=2.35=hc3fd857_29
+  - binutils_impl_linux-64=2.35.1=h193b22a_2
+  - binutils_linux-64=2.35=h67ddf6f_30
   - bioconductor-annotate=1.68.0=r40_0
   - bioconductor-annotationdbi=1.52.0=r40_0
   - bioconductor-biobase=2.50.0=r40h037d062_0
@@ -36,179 +36,189 @@ dependencies:
   - bioconductor-rsamtools=2.6.0=r40h5f743cb_0
   - bioconductor-rtracklayer=1.50.0=r40h9bb0e53_1
   - bioconductor-s4vectors=0.28.0=r40h037d062_0
-  - bioconductor-stager=1.12.0=r40_0
   - bioconductor-summarizedexperiment=1.20.0=r40_0
   - bioconductor-tximport=1.18.0=r40_0
   - bioconductor-xvector=0.30.0=r40h037d062_0
   - bioconductor-zlibbioc=1.36.0=r40h037d062_0
   - bwidget=1.9.14=ha770c72_0
-  - bzip2=1.0.8=h516909a_3
-  - c-ares=1.16.1=h516909a_3
-  - ca-certificates=2020.11.8=ha878542_0
+  - bzip2=1.0.8=h7f98852_4
+  - ca-certificates=2020.12.5=ha878542_0
   - cairo=1.16.0=h9f066cc_1006
-  - curl=7.71.1=he644dc0_8
-  - fontconfig=2.13.1=h7e3eb15_1002
-  - freetype=2.10.4=h7ca028e_0
+  - certifi=2020.12.5=py39hf3d152e_1
+  - curl=7.71.1=he644dc0_3
+  - fontconfig=2.13.1=hba837de_1004
+  - freetype=2.10.4=h0708190_1
   - fribidi=1.0.10=h36c2ea0_0
   - gcc_impl_linux-64=7.5.0=hda68d29_13
-  - gcc_linux-64=7.5.0=he2a3fca_29
-  - gettext=0.19.8.1=hf34092f_1004
-  - gfortran_impl_linux-64=7.5.0=hfca37b7_17
-  - gfortran_linux-64=7.5.0=ha081f1e_29
+  - gcc_linux-64=7.5.0=h47867f9_30
+  - gettext=0.19.8.1=h0b5b191_1005
+  - gfortran_impl_linux-64=7.5.0=h56cb351_18
+  - gfortran_linux-64=7.5.0=h78c8a43_30
+  - glib=2.66.7=h9c3ff4c_0
+  - glib-tools=2.66.7=h9c3ff4c_0
   - graphite2=1.3.13=h58526e2_1001
-  - gsl=2.6=hf94e986_0
+  - gsl=2.6=he838d99_2
   - gxx_impl_linux-64=7.5.0=h64c220c_13
-  - gxx_linux-64=7.5.0=h547f3ba_29
+  - gxx_linux-64=7.5.0=h555fc39_30
   - harfbuzz=2.7.2=ha5b49bf_1
   - icu=67.1=he1b5a44_0
   - jpeg=9d=h36c2ea0_0
   - kernel-headers_linux-64=2.6.32=h77966d4_13
   - krb5=1.17.2=h926e7f8_0
-  - ld_impl_linux-64=2.35.1=hed1e6ac_0
+  - ld_impl_linux-64=2.35.1=hea4e1c9_2
   - libblas=3.8.0=17_openblas
   - libcblas=3.8.0=17_openblas
-  - libcurl=7.71.1=hcdd3856_8
+  - libcurl=7.71.1=hcdd3856_3
   - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-devel_linux-64=9.3.0=hfd08b2a_17
-  - libgcc-ng=9.3.0=h5dbcf3e_17
-  - libgfortran-ng=7.5.0=hae1eefd_17
-  - libgfortran4=7.5.0=hae1eefd_17
-  - libglib=2.66.2=hbe7bbb4_0
-  - libgomp=9.3.0=h5dbcf3e_17
+  - libffi=3.3=h58526e2_2
+  - libgcc-devel_linux-64=9.3.0=h7864c58_18
+  - libgcc-ng=9.3.0=h2828fa1_18
+  - libgfortran-ng=7.5.0=h14aa051_18
+  - libgfortran4=7.5.0=h14aa051_18
+  - libglib=2.66.7=h1f3bc88_0
+  - libgomp=9.3.0=h2828fa1_18
   - libiconv=1.16=h516909a_0
   - liblapack=3.8.0=17_openblas
-  - libnghttp2=1.41.0=h8cfc5f6_2
-  - libopenblas=0.3.10=h5a2b251_0
+  - libopenblas=0.3.10=pthreads_hb3c22a3_5
   - libpng=1.6.37=h21135ba_2
   - libssh2=1.9.0=hab1572f_5
-  - libstdcxx-devel_linux-64=9.3.0=h4084dd6_17
-  - libstdcxx-ng=9.3.0=h2ae2ef3_17
-  - libtiff=4.1.0=h4f3a223_6
-  - libuuid=2.32.1=h14c3975_1000
-  - libwebp-base=1.1.0=h36c2ea0_3
-  - libxcb=1.13=h14c3975_1002
+  - libstdcxx-devel_linux-64=9.3.0=hb016644_18
+  - libstdcxx-ng=9.3.0=h6de172a_18
+  - libtiff=4.2.0=hdc55705_0
+  - libuuid=2.32.1=h7f98852_1000
+  - libwebp-base=1.2.0=h7f98852_0
+  - libxcb=1.13=h7f98852_1003
   - libxml2=2.9.10=h68273f3_2
-  - lz4-c=1.9.2=he1b5a44_3
+  - lz4-c=1.9.3=h9c3ff4c_0
   - make=4.3=hd18ef5c_1
   - ncurses=6.2=h58526e2_4
-  - openssl=1.1.1h=h516909a_0
-  - pango=1.42.4=h80147aa_5
+  - openssl=1.1.1j=h7f98852_0
+  - pango=1.42.4=h69149e4_5
   - pcre=8.44=he1b5a44_0
-  - pcre2=10.35=h279444b_1
+  - pcre2=10.35=h032f7d1_2
+  - pip=21.0.1=pyhd8ed1ab_0
   - pixman=0.40.0=h36c2ea0_0
-  - pthread-stubs=0.4=h14c3975_1001
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - python=3.9.1=hffdb5ce_5_cpython
+  - python_abi=3.9=1_cp39
   - r-askpass=1.1=r40hcdcec82_2
   - r-assertthat=0.2.1=r40h6115d3f_2
-  - r-backports=1.2.0=r40h9e2df91_0
-  - r-base=4.0.3=hd272fe0_2
-  - r-bh=1.72.0_3=r40h6115d3f_1
+  - r-backports=1.2.1=r40hcfec24a_0
+  - r-base=4.0.2=he766273_1
+  - r-bh=1.75.0_0=r40hc72bb7e_0
   - r-bit=4.0.4=r40hcdcec82_0
   - r-bit64=4.0.5=r40hcdcec82_0
   - r-bitops=1.0_6=r40hcdcec82_1004
   - r-blob=1.2.1=r40h6115d3f_1
-  - r-brio=1.1.0=r40h9e2df91_1
+  - r-brio=1.1.1=r40hcfec24a_0
+  - r-cachem=1.0.4=r40hcfec24a_0
   - r-callr=3.5.1=r40h142f84f_0
-  - r-cli=2.1.0=r40h142f84f_0
+  - r-cli=2.3.0=r40hc72bb7e_0
   - r-colorspace=2.0_0=r40h9e2df91_0
-  - r-crayon=1.3.4=r40h6115d3f_1003
+  - r-crayon=1.4.1=r40hc72bb7e_0
   - r-curl=4.3=r40hcdcec82_1
-  - r-dbi=1.1.0=r40h6115d3f_1
-  - r-dbplyr=2.0.0=r40hc72bb7e_0
+  - r-dbi=1.1.1=r40hc72bb7e_0
+  - r-dbplyr=2.1.0=r40hc72bb7e_0
   - r-desc=1.2.0=r40h6115d3f_1003
-  - r-diffobj=0.3.2=r40h9e2df91_1
+  - r-diffobj=0.3.3=r40hcfec24a_0
   - r-digest=0.6.27=r40h1b71b39_0
-  - r-dplyr=1.0.2=r40h0357c0b_0
+  - r-dplyr=1.0.4=r40h03ef668_0
   - r-ellipsis=0.3.1=r40hcdcec82_0
   - r-evaluate=0.14=r40h6115d3f_2
-  - r-fansi=0.4.1=r40hcdcec82_1
+  - r-fansi=0.4.2=r40hcfec24a_0
   - r-farver=2.0.3=r40h0357c0b_1
+  - r-fastmap=1.1.0=r40h03ef668_0
   - r-formatr=1.7=r40h6115d3f_2
   - r-futile.logger=1.4.3=r40h6115d3f_1003
   - r-futile.options=1.0.1=r40h6115d3f_1002
   - r-generics=0.1.0=r40hc72bb7e_0
-  - r-ggplot2=3.3.2=r40h6115d3f_0
-  - r-glue=1.4.2=r40hcdcec82_0
+  - r-ggplot2=3.3.3=r40hc72bb7e_0
+  - r-glue=1.4.2=r40hcfec24a_0
   - r-gtable=0.3.0=r40h6115d3f_3
-  - r-hms=0.5.3=r40h6115d3f_1
+  - r-hms=1.0.0=r40hc72bb7e_0
   - r-httr=1.4.2=r40h6115d3f_0
   - r-hwriter=1.3.2=r40h6115d3f_1003
-  - r-isoband=0.2.2=r40h0357c0b_0
-  - r-jsonlite=1.7.1=r40hcdcec82_0
+  - r-isoband=0.2.3=r40h03ef668_0
+  - r-jsonlite=1.7.2=r40hcfec24a_0
   - r-labeling=0.4.2=r40h142f84f_0
   - r-lambda.r=1.2.4=r40h6115d3f_1
-  - r-lattice=0.20_41=r40hcdcec82_2
-  - r-lifecycle=0.2.0=r40h6115d3f_1
+  - r-lattice=0.20_41=r40hcfec24a_3
+  - r-lifecycle=1.0.0=r40hc72bb7e_0
   - r-locfit=1.5_9.4=r40hcdcec82_1
-  - r-mass=7.3_53=r40hcdcec82_0
-  - r-matrix=1.2_18=r40h7fa42b6_3
-  - r-matrixstats=0.57.0=r40hcdcec82_0
-  - r-memoise=1.1.0=r40h6115d3f_1004
-  - r-mgcv=1.8_33=r40h7fa42b6_0
-  - r-mime=0.9=r40hcdcec82_1
+  - r-magrittr=2.0.1=r40hcfec24a_1
+  - r-mass=7.3_53.1=r40hcfec24a_0
+  - r-matrix=1.3_2=r40he454529_0
+  - r-matrixstats=0.58.0=r40hcfec24a_0
+  - r-memoise=2.0.0=r40hc72bb7e_0
+  - r-mgcv=1.8_34=r40he454529_0
+  - r-mime=0.10=r40hcfec24a_0
   - r-munsell=0.5.0=r40h6115d3f_1003
   - r-nlme=3.1_150=r40h31ca83e_0
   - r-openssl=1.4.3=r40he5c4762_0
-  - r-pillar=1.4.6=r40h6115d3f_0
-  - r-pkgbuild=1.1.0=r40h6115d3f_0
+  - r-pillar=1.4.7=r40hc72bb7e_0
+  - r-pkgbuild=1.2.0=r40hc72bb7e_0
   - r-pkgconfig=2.0.3=r40h6115d3f_1
   - r-pkgload=1.1.0=r40h0357c0b_0
   - r-plogr=0.2.0=r40h6115d3f_1003
   - r-plyr=1.8.6=r40h0357c0b_1
   - r-praise=1.0.0=r40h6115d3f_1004
   - r-prettyunits=1.1.1=r40h6115d3f_1
-  - r-processx=3.4.4=r40hcdcec82_0
+  - r-processx=3.4.5=r40hcfec24a_0
   - r-progress=1.2.2=r40h6115d3f_2
-  - r-ps=1.4.0=r40h0eb13af_0
+  - r-ps=1.5.0=r40hcfec24a_0
   - r-purrr=0.3.4=r40hcdcec82_1
   - r-r6=2.5.0=r40hc72bb7e_0
-  - r-rappdirs=0.3.1=r40hcdcec82_1004
+  - r-rappdirs=0.3.3=r40hcfec24a_0
   - r-rcolorbrewer=1.1_2=r40h6115d3f_1003
-  - r-rcpp=1.0.5=r40he524a50_0
-  - r-rcpparmadillo=0.10.1.2.0=r40hfbb317b_0
+  - r-rcpp=1.0.6=r40h03ef668_0
+  - r-rcpparmadillo=0.10.2.1.0=r40h306847c_0
   - r-rcurl=1.98_1.2=r40hcdcec82_1
   - r-rematch2=2.1.2=r40h6115d3f_1
   - r-reshape2=1.4.4=r40h0357c0b_1
-  - r-rlang=0.4.8=r40h9e2df91_0
+  - r-rlang=0.4.10=r40hcfec24a_0
   - r-rprojroot=2.0.2=r40hc72bb7e_0
-  - r-rsqlite=2.2.1=r40h1b71b39_0
+  - r-rsqlite=2.2.3=r40h03ef668_0
   - r-rstudioapi=0.13=r40hc72bb7e_0
   - r-scales=1.1.1=r40h6115d3f_0
   - r-snow=0.4_3=r40h6115d3f_1002
   - r-statmod=1.4.35=r40h6e990d7_1
-  - r-stringi=1.5.3=r40h604b29c_0
+  - r-stringi=1.5.3=r40hca8494e_0
   - r-stringr=1.4.0=r40h6115d3f_2
-  - r-survival=3.2_7=r40hcdcec82_0
+  - r-survival=3.2_7=r40hcfec24a_0
   - r-sys=3.4=r40hcdcec82_0
-  - r-testthat=3.0.0=r40he524a50_0
-  - r-tibble=3.0.4=r40h0eb13af_0
+  - r-testthat=3.0.2=r40h03ef668_0
+  - r-tibble=3.0.6=r40hcfec24a_0
   - r-tidyselect=1.1.0=r40h6115d3f_0
   - r-utf8=1.1.4=r40hcdcec82_1003
-  - r-vctrs=0.3.5=r40h9e2df91_0
+  - r-vctrs=0.3.6=r40hcfec24a_0
   - r-viridislite=0.3.0=r40h6115d3f_1003
-  - r-waldo=0.2.3=r40hc72bb7e_0
-  - r-withr=2.3.0=r40h6115d3f_0
-  - r-xml=3.99_0.3=r40hcdcec82_1
+  - r-waldo=0.2.4=r40hc72bb7e_0
+  - r-withr=2.4.1=r40hc72bb7e_0
+  - r-xml=3.99_0.5=r40hcfec24a_0
   - r-xml2=1.3.2=r40h0357c0b_1
   - r-xtable=1.8_4=r40h6115d3f_3
   - r-zeallot=0.1.0=r40h6115d3f_1002
   - readline=8.0=he28a2e2_2
   - sed=4.8=he412f7d_0
+  - setuptools=49.6.0=py39hf3d152e_3
+  - sqlite=3.34.0=h74cdb3f_0
   - sysroot_linux-64=2.12=h77966d4_13
-  - tk=8.6.10=hed695b0_1
+  - tk=8.6.10=h21135ba_1
   - tktable=2.10=hb7b940f_3
-  - xorg-kbproto=1.0.7=h14c3975_1002
+  - tzdata=2021a=he74cb21_0
+  - wheel=0.36.2=pyhd3deb0d_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.0.10=h516909a_0
   - xorg-libsm=1.2.3=h84519dc_1000
   - xorg-libx11=1.6.12=h516909a_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
   - xorg-libxext=1.3.4=h516909a_0
   - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-libxt=1.2.1=h7f98852_0
   - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h516909a_1
   - zlib=1.2.11=h516909a_1010
-  - zstd=1.4.5=h6597ccf_2
+  - zstd=1.4.8=ha95c52a_1
