--- a/envs/diego_DAS.yaml
+++ b/envs/diego_DAS.yaml
@@ -1,57 +1,59 @@
 name: diego_DAS
 channels:
+  - anaconda
   - conda-forge
   - bioconda
   - defaults
-  - r
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - bedtools=2.29.2
-  - bzip2=1.0.8
-  - ca-certificates=2020.4.5.1
-  - certifi=2020.4.5.1
-  - curl=7.69.1
-  - cycler=0.10.0
-  - diego=0.1.2
-  - freetype=2.10.1
-  - htslib=1.9
-  - icu=64.2
-  - kiwisolver=1.2.0
-  - krb5=1.17.1
-  - ld_impl_linux-64=2.34
-  - libblas=3.8.0
-  - libcblas=3.8.0
-  - libcurl=7.69.1
-  - libdeflate=1.5
-  - libedit=3.1.20170329
-  - libffi=3.2.1
-  - libgcc-ng=9.2.0
-  - libgfortran-ng=7.3.0
-  - liblapack=3.8.0
-  - libopenblas=0.3.9
-  - libpng=1.6.37
-  - libssh2=1.8.2
-  - libstdcxx-ng=9.2.0
-  - llvm-openmp=10.0.0
-  - matplotlib-base=3.2.1
-  - ncurses=6.1
-  - numpy=1.18.1
-  - openssl=1.1.1f
-  - perl=5.26.2
-  - pip=20.0.2
-  - pyparsing=2.4.7
-  - python=3.8.2
-  - python-dateutil=2.8.1
-  - python_abi=3.8
-  - readline=8.0
-  - samtools=1.9
-  - scipy=1.4.1
-  - setuptools=46.1.3
-  - six=1.14.0
-  - sqlite=3.30.1
-  - tk=8.6.10
-  - tornado=6.0.4
-  - wheel=0.34.2
-  - xz=5.2.5
-  - zlib=1.2.11
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_llvm
+  - bedtools=2.29.2=hc088bd4_0
+  - blas=1.0=openblas
+  - bzip2=1.0.8=h516909a_3
+  - ca-certificates=2020.10.14=0
+  - certifi=2020.6.20=py38_0
+  - curl=7.69.1=h33f0ec9_0
+  - cycler=0.10.0=py_2
+  - diego=0.1.2=py_0
+  - freetype=2.10.1=he06d7ca_0
+  - htslib=1.9=h4da6232_3
+  - icu=64.2=he1b5a44_1
+  - kiwisolver=1.2.0=py38hbf85e49_1
+  - krb5=1.17.1=h2fd8d38_0
+  - ld_impl_linux-64=2.34=hc38a660_9
+  - libblas=3.8.0=16_openblas
+  - libcblas=3.8.0=16_openblas
+  - libcurl=7.69.1=hf7181ac_0
+  - libdeflate=1.5=h516909a_0
+  - libedit=3.1.20170329=hf8c457e_1001
+  - libffi=3.2.1=he1b5a44_1007
+  - libgcc-ng=9.2.0=h24d8f2e_2
+  - libgfortran-ng=7.3.0=hdf63c60_5
+  - liblapack=3.8.0=16_openblas
+  - libopenblas=0.3.9=h5ec1e0e_0
+  - libpng=1.6.37=h21135ba_2
+  - libssh2=1.8.2=h22169c7_2
+  - libstdcxx-ng=9.2.0=hdf63c60_2
+  - llvm-openmp=10.0.0=hc9558a2_0
+  - matplotlib-base=3.2.1=py38h2af1d28_0
+  - ncurses=6.1=hf484d3e_1002
+  - numpy=1.18.1=py38h8854b6b_1
+  - openssl=1.1.1h=h7b6447c_0
+  - perl=5.26.2=h36c2ea0_1008
+  - pip=20.0.2=py_2
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - python=3.8.2=he5300dc_6_cpython
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=1_cp38
+  - readline=8.0=h46ee950_1
+  - samtools=1.9=h10a08f8_12
+  - scipy=1.5.2=py38habc2bb6_0
+  - setuptools=46.1.3=py38h32f6830_0
+  - six=1.14.0=py_1
+  - sqlite=3.30.1=hcee41ef_0
+  - tk=8.6.10=h21135ba_1
+  - tornado=6.0.4=py38h1e0a361_2
+  - wheel=0.34.2=py_1
+  - xz=5.2.5=h516909a_1
+  - zlib=1.2.11=h516909a_1010
+prefix: /home/roberto/miniconda3/envs/diego_DAS
