--- a/envs/deseq2_DE.yaml
+++ b/envs/deseq2_DE.yaml
@@ -3,182 +3,187 @@ channels:
   - conda-forge
   - bioconda
   - defaults
-  - r
 dependencies:
-  - _libgcc_mutex=0.1
-  - _r-mutex=1.0.1
-  - binutils_impl_linux-64=2.31.1
-  - binutils_linux-64=2.31.1
-  - bioconductor-annotate=1.64.0
-  - bioconductor-annotationdbi=1.48.0
-  - bioconductor-biobase=2.46.0
-  - bioconductor-biocgenerics=0.32.0
-  - bioconductor-biocparallel=1.20.0
-  - bioconductor-delayedarray=0.12.0
-  - bioconductor-deseq2=1.26.0
-  - bioconductor-genefilter=1.68.0
-  - bioconductor-geneplotter=1.64.0
-  - bioconductor-genomeinfodb=1.22.0
-  - bioconductor-genomeinfodbdata=1.2.2
-  - bioconductor-genomicranges=1.38.0
-  - bioconductor-iranges=2.20.0
-  - bioconductor-s4vectors=0.24.0
-  - bioconductor-summarizedexperiment=1.16.0
-  - bioconductor-xvector=0.26.0
-  - bioconductor-zlibbioc=1.32.0
-  - bwidget=1.9.13
-  - bzip2=1.0.8
-  - ca-certificates=2019.9.11
-  - cairo=1.16.0
-  - curl=7.65.3
-  - fontconfig=2.13.1
-  - freetype=2.10.0
-  - fribidi=1.0.5
-  - gcc_impl_linux-64=7.3.0
-  - gcc_linux-64=7.3.0
-  - gettext=0.19.8.1
-  - gfortran_impl_linux-64=7.3.0
-  - gfortran_linux-64=7.3.0
-  - glib=2.58.3
-  - graphite2=1.3.13
-  - gsl=2.5
-  - gxx_impl_linux-64=7.3.0
-  - gxx_linux-64=7.3.0
-  - harfbuzz=2.4.0
-  - icu=64.2
-  - jpeg=9c
-  - krb5=1.16.3
-  - libblas=3.8.0
-  - libcblas=3.8.0
-  - libcurl=7.65.3
-  - libedit=3.1.20170329
-  - libffi=3.2.1
-  - libgcc-ng=9.1.0
-  - libgfortran-ng=7.3.0
-  - libiconv=1.15
-  - liblapack=3.8.0
-  - libopenblas=0.3.7
-  - libpng=1.6.37
-  - libssh2=1.8.2
-  - libstdcxx-ng=9.1.0
-  - libtiff=4.1.0
-  - libuuid=2.32.1
-  - libxcb=1.13
-  - libxml2=2.9.10
-  - lz4-c=1.8.3
-  - make=4.2.1
-  - ncurses=6.1
-  - openssl=1.1.1d
-  - pango=1.42.4
-  - pcre=8.43
-  - pigz=2.3.4
-  - pixman=0.38.0
-  - pthread-stubs=0.4
-  - r-acepack=1.4.1
-  - r-assertthat=0.2.1
-  - r-backports=1.1.5
-  - r-base=3.6.1
-  - r-base64enc=0.1_3
-  - r-bh=1.69.0_1
-  - r-bit=1.1_14
-  - r-bit64=0.9_7
-  - r-bitops=1.0_6
-  - r-blob=1.2.0
-  - r-catools=1.17.1.2
-  - r-checkmate=1.9.4
-  - r-cli=1.1.0
-  - r-cluster=2.1.0
-  - r-colorspace=1.4_1
-  - r-crayon=1.3.4
-  - r-data.table=1.12.6
-  - r-dbi=1.0.0
-  - r-digest=0.6.22
-  - r-ellipsis=0.3.0
-  - r-evaluate=0.14
-  - r-fansi=0.4.0
-  - r-foreign=0.8_72
-  - r-formatr=1.7
-  - r-formula=1.2_3
-  - r-futile.logger=1.4.3
-  - r-futile.options=1.0.1
-  - r-gdata=2.18.0
-  - r-ggplot2=3.2.1
-  - r-glue=1.3.1
-  - r-gplots=3.0.1.1
-  - r-gridextra=2.3
-  - r-gtable=0.3.0
-  - r-gtools=3.8.1
-  - r-highr=0.8
-  - r-hmisc=4.2_0
-  - r-htmltable=1.13.2
-  - r-htmltools=0.4.0
-  - r-htmlwidgets=1.5.1
-  - r-jsonlite=1.6
-  - r-kernsmooth=2.23_15
-  - r-knitr=1.25
-  - r-labeling=0.3
-  - r-lambda.r=1.2.4
-  - r-lattice=0.20_38
-  - r-latticeextra=0.6_28
-  - r-lazyeval=0.2.2
-  - r-locfit=1.5_9.1
-  - r-magrittr=1.5
-  - r-markdown=1.1
-  - r-mass=7.3_51.4
-  - r-matrix=1.2_17
-  - r-matrixstats=0.55.0
-  - r-memoise=1.1.0
-  - r-mgcv=1.8_29
-  - r-mime=0.7
-  - r-munsell=0.5.0
-  - r-nlme=3.1_141
-  - r-nnet=7.3_12
-  - r-pillar=1.4.2
-  - r-pkgconfig=2.0.3
-  - r-plogr=0.2.0
-  - r-plyr=1.8.4
-  - r-prettyunits=1.0.2
-  - r-r6=2.4.0
-  - r-rcolorbrewer=1.1_2
-  - r-rcpp=1.0.3
-  - r-rcpparmadillo=0.9.800.1.0
-  - r-rcurl=1.95_4.12
-  - r-reshape2=1.4.3
-  - r-rlang=0.4.1
-  - r-rpart=4.1_15
-  - r-rsqlite=2.1.2
-  - r-rstudioapi=0.10
-  - r-scales=1.0.0
-  - r-snow=0.4_3
-  - r-stringi=1.4.3
-  - r-stringr=1.4.0
-  - r-survival=2.44_1.1
-  - r-tibble=2.1.3
-  - r-utf8=1.1.4
-  - r-vctrs=0.2.0
-  - r-viridis=0.5.1
-  - r-viridislite=0.3.0
-  - r-withr=2.1.2
-  - r-xfun=0.10
-  - r-xml=3.98_1.20
-  - r-xtable=1.8_4
-  - r-yaml=2.2.0
-  - r-zeallot=0.1.0
-  - readline=8.0
-  - sed=4.7
-  - tk=8.6.9
-  - tktable=2.10
-  - xorg-kbproto=1.0.7
-  - xorg-libice=1.0.10
-  - xorg-libsm=1.2.3
-  - xorg-libx11=1.6.9
-  - xorg-libxau=1.0.9
-  - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
-  - xorg-libxrender=0.9.10
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xproto=7.0.31
-  - xz=5.2.4
-  - zlib=1.2.11
-  - zstd=1.4.3
+  - _libgcc_mutex=0.1=main
+  - _r-mutex=1.0.1=anacondar_1
+  - binutils_impl_linux-64=2.31.1=h7fc9f1b_5
+  - binutils_linux-64=2.31.1=h6176602_14
+  - bioconductor-annotate=1.64.0=r36_0
+  - bioconductor-annotationdbi=1.48.0=r36_0
+  - bioconductor-biobase=2.46.0=r36h516909a_0
+  - bioconductor-biocgenerics=0.32.0=r36_0
+  - bioconductor-biocparallel=1.20.0=r36he1b5a44_0
+  - bioconductor-biostrings=2.54.0=r36h516909a_0
+  - bioconductor-delayedarray=0.12.0=r36h516909a_0
+  - bioconductor-deseq2=1.26.0=r36he1b5a44_0
+  - bioconductor-genefilter=1.68.0=r36hc99cbb1_0
+  - bioconductor-geneplotter=1.64.0=r36_0
+  - bioconductor-genomeinfodb=1.22.0=r36_0
+  - bioconductor-genomeinfodbdata=1.2.2=r36_0
+  - bioconductor-genomicalignments=1.22.0=r36h516909a_0
+  - bioconductor-genomicranges=1.38.0=r36h516909a_0
+  - bioconductor-iranges=2.20.0=r36h516909a_0
+  - bioconductor-rhtslib=1.18.0=r36hdb70ac9_1
+  - bioconductor-rsamtools=2.2.0=r36he1b5a44_0
+  - bioconductor-rtracklayer=1.46.0=r36h516909a_0
+  - bioconductor-s4vectors=0.24.0=r36h516909a_0
+  - bioconductor-summarizedexperiment=1.16.0=r36_0
+  - bioconductor-xvector=0.26.0=r36h516909a_0
+  - bioconductor-zlibbioc=1.32.0=r36h516909a_0
+  - bwidget=1.9.13=0
+  - bzip2=1.0.8=h516909a_3
+  - ca-certificates=2020.12.5=ha878542_0
+  - cairo=1.16.0=hcf35c78_1003
+  - curl=7.65.3=hf8cf82a_0
+  - fontconfig=2.13.1=h86ecdb6_1001
+  - freetype=2.10.0=he06d7ca_2
+  - fribidi=1.0.5=h516909a_1003
+  - gcc_impl_linux-64=7.3.0=habb00fd_1
+  - gcc_linux-64=7.3.0=h553295d_14
+  - gettext=0.19.8.1=hf34092f_1004
+  - gfortran_impl_linux-64=7.3.0=hdf63c60_5
+  - gfortran_linux-64=7.3.0=h553295d_14
+  - glib=2.58.3=h6f030ca_1002
+  - graphite2=1.3.13=h58526e2_1001
+  - gsl=2.5=h294904e_1
+  - gxx_impl_linux-64=7.3.0=hdf63c60_1
+  - gxx_linux-64=7.3.0=h553295d_14
+  - harfbuzz=2.4.0=h9f30f68_3
+  - icu=64.2=he1b5a44_1
+  - jpeg=9c=h14c3975_1001
+  - krb5=1.16.3=h05b26f9_1001
+  - libblas=3.8.0=14_openblas
+  - libcblas=3.8.0=14_openblas
+  - libcurl=7.65.3=hda55be3_0
+  - libedit=3.1.20170329=hf8c457e_1001
+  - libffi=3.2.1=he1b5a44_1007
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_5
+  - libiconv=1.15=h516909a_1006
+  - liblapack=3.8.0=14_openblas
+  - libopenblas=0.3.7=h5ec1e0e_6
+  - libpng=1.6.37=h21135ba_2
+  - libssh2=1.8.2=h22169c7_2
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=hfc65ed5_0
+  - libuuid=2.32.1=h14c3975_1000
+  - libxcb=1.13=h14c3975_1002
+  - libxml2=2.9.10=hee79883_0
+  - lz4-c=1.8.3=he1b5a44_1001
+  - make=4.2.1=h14c3975_2004
+  - ncurses=6.1=hf484d3e_1002
+  - openssl=1.1.1h=h516909a_0
+  - pango=1.42.4=ha030887_1
+  - pcre=8.43=he1b5a44_0
+  - pigz=2.3.4=hed695b0_1
+  - pixman=0.38.0=h516909a_1003
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - r-acepack=1.4.1=r36h9bbef5b_1005
+  - r-assertthat=0.2.1=r36h6115d3f_2
+  - r-backports=1.1.5=r36hcdcec82_0
+  - r-base=3.6.1=h3a67422_6
+  - r-base64enc=0.1_3=r36hcdcec82_1004
+  - r-bh=1.69.0_1=r36h6115d3f_1
+  - r-bit=1.1_14=r36hcdcec82_1
+  - r-bit64=0.9_7.1=r36hcdcec82_0
+  - r-bitops=1.0_6=r36hcdcec82_1004
+  - r-blob=1.2.0=r36_1
+  - r-catools=1.17.1.2=r36h0357c0b_1
+  - r-checkmate=1.9.4=r36hcdcec82_1
+  - r-cli=1.1.0=r36h6115d3f_2
+  - r-cluster=2.1.0=r36h9bbef5b_3
+  - r-colorspace=1.4_1=r36hcdcec82_2
+  - r-crayon=1.3.4=r36h6115d3f_1003
+  - r-data.table=1.12.6=r36hcdcec82_0
+  - r-dbi=1.0.0=r36h6115d3f_1002
+  - r-digest=0.6.22=r36h0357c0b_0
+  - r-ellipsis=0.3.0=r36hcdcec82_1
+  - r-evaluate=0.14=r36h6115d3f_2
+  - r-fansi=0.4.0=r36hcdcec82_1001
+  - r-foreign=0.8_72=r36hcdcec82_0
+  - r-formatr=1.7=r36h6115d3f_2
+  - r-formula=1.2_3=r36h6115d3f_1003
+  - r-futile.logger=1.4.3=r36h6115d3f_1003
+  - r-futile.options=1.0.1=r36h6115d3f_1002
+  - r-gdata=2.18.0=r36h6115d3f_1003
+  - r-ggplot2=3.2.1=r36h6115d3f_0
+  - r-glue=1.3.1=r36hcdcec82_1
+  - r-gplots=3.0.1.1=r36h6115d3f_1
+  - r-gridextra=2.3=r36h6115d3f_1003
+  - r-gtable=0.3.0=r36h6115d3f_3
+  - r-gtools=3.8.1=r36hcdcec82_1003
+  - r-highr=0.8=r36h6115d3f_2
+  - r-hmisc=4.2_0=r36h9bbef5b_2
+  - r-htmltable=1.13.2=r36h6115d3f_0
+  - r-htmltools=0.4.0=r36h0357c0b_1
+  - r-htmlwidgets=1.5.1=r36h6115d3f_1
+  - r-jsonlite=1.6.1=r36hcdcec82_1
+  - r-kernsmooth=2.23_15=r36h9bbef5b_1004
+  - r-knitr=1.25=r36h6115d3f_0
+  - r-labeling=0.3=r36h6115d3f_1003
+  - r-lambda.r=1.2.4=r36h6115d3f_1
+  - r-lattice=0.20_38=r36hcdcec82_1002
+  - r-latticeextra=0.6_28=r36h6115d3f_1002
+  - r-lazyeval=0.2.2=r36hcdcec82_2
+  - r-locfit=1.5_9.1=r36h516909a_1004
+  - r-magrittr=1.5=r36h6115d3f_1003
+  - r-markdown=1.1=r36hcdcec82_1
+  - r-mass=7.3_51.4=r36hcdcec82_1
+  - r-matrix=1.2_17=r36hcdcec82_1
+  - r-matrixstats=0.55.0=r36hcdcec82_0
+  - r-memoise=1.1.0=r36h6115d3f_1004
+  - r-mgcv=1.8_29=r36hcdcec82_0
+  - r-mime=0.7=r36hcdcec82_1
+  - r-munsell=0.5.0=r36h6115d3f_1003
+  - r-nlme=3.1_141=r36h9bbef5b_1
+  - r-nnet=7.3_12=r36hcdcec82_1003
+  - r-pillar=1.4.2=r36h6115d3f_2
+  - r-pkgconfig=2.0.3=r36h6115d3f_1
+  - r-plogr=0.2.0=r36h6115d3f_1003
+  - r-plyr=1.8.4=r36h0357c0b_1003
+  - r-prettyunits=1.0.2=r36h6115d3f_1002
+  - r-r6=2.4.0=r36h6115d3f_2
+  - r-rcolorbrewer=1.1_2=r36h6115d3f_1003
+  - r-rcpp=1.0.3=r36h0357c0b_0
+  - r-rcpparmadillo=0.9.800.1.0=r36h0357c0b_0
+  - r-rcurl=1.95_4.12=r36hcdcec82_1
+  - r-reshape2=1.4.3=r36h0357c0b_1004
+  - r-rlang=0.4.1=r36hcdcec82_0
+  - r-rpart=4.1_15=r36hcdcec82_2
+  - r-rsqlite=2.1.2=r36h0357c0b_1
+  - r-rstudioapi=0.10=r36h6115d3f_2
+  - r-scales=1.0.0=r36h0357c0b_1002
+  - r-snow=0.4_3=r36h6115d3f_1002
+  - r-stringi=1.4.3=r36h0e574ca_3
+  - r-stringr=1.4.0=r36h6115d3f_2
+  - r-survival=2.44_1.1=r36hcdcec82_1
+  - r-tibble=2.1.3=r36hcdcec82_1
+  - r-utf8=1.1.4=r36hcdcec82_1003
+  - r-vctrs=0.2.0=r36hcdcec82_1
+  - r-viridis=0.5.1=r36h6115d3f_1004
+  - r-viridislite=0.3.0=r36h6115d3f_1003
+  - r-withr=2.1.2=r36h6115d3f_1001
+  - r-xfun=0.10=r36h6115d3f_0
+  - r-xml=3.98_1.20=r36hcdcec82_1
+  - r-xtable=1.8_4=r36h6115d3f_3
+  - r-yaml=2.2.0=r36hcdcec82_1002
+  - r-zeallot=0.1.0=r36h6115d3f_1002
+  - readline=8.0=h46ee950_1
+  - sed=4.7=h1bed415_1000
+  - tk=8.6.9=hed695b0_1003
+  - tktable=2.10=h555a92e_3
+  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-libice=1.0.10=h516909a_0
+  - xorg-libsm=1.2.3=h84519dc_1000
+  - xorg-libx11=1.6.9=h516909a_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-renderproto=0.11.1=h14c3975_1002
+  - xorg-xextproto=7.3.0=h14c3975_1002
+  - xorg-xproto=7.0.31=h14c3975_1007
+  - xz=5.2.4=h516909a_1002
+  - zlib=1.2.11=h516909a_1010
+  - zstd=1.4.3=h3b9ef0a_0
+prefix: /home/roberto/miniconda3/envs/deseq2_DE
